2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ext2.c (grub_ext4_find_leaf): MAke buf as pointer to
	properly aligned memory.
	(grub_ext2_read_block): Ensure buffer alignment.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/romfs.c (grub_romfs_iterate_dir): Properly align
	name for checksum and fix allocation algorithm.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/types.h (grub_properly_aligned_t): New type.
	(GRUB_PROPERLY_ALIGNED_ARRAY): New macro.
	(grub_get_unaligned16): Add explicit casts.
	(grub_get_unaligned32): Likewise.
	(grub_get_unaligned64): Likewise.
	(grub_set_unaligned16): New function.
	(grub_set_unaligned32): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/datetime.c (grub_weekday_names): Make const.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/udf.c (read_string): Macroify GRUB_MAX_UTF8_PER_UTF16.
	* grub-core/fs/jfs.c (grub_jfs_diropen): Likewise.
	* grub-core/fs/fat.c (grub_fat_iterate_dir): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/at_keyboard.c (set_scancodes): Fix preprocessor
	conditionals.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/main.c (main): Add missing const qualifier.
	* grub-core/loader/efi/appleloader.c (devdata): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Unify and improve RAID and crypto xor.

	* grub-core/disk/raid.c (grub_raid_block_xor): Removed. All users
	changed to grub_crypto_xor
	* grub-core/lib/crypto.c (grub_crypto_xor): Moved from here ...
	* include/grub/crypto.h (grub_crypto_xor): ... here. Inlined.
	Use bigger types when possible.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/raid.c (scan_devices): Fix condition.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/drivers/ieee1275/ofnet.c (bootp_response_properties):
	Make name a const ptr.
